# bitfit_nlp_cub

./: .gitignore  README.md  package-lock.json  package.json  part1.sh  part1_grid.sh  part2.sh  presentation.html  presentation.md  presentation_new.md  presentation_plan.md  pyproject.toml
configs/: config.yaml  squad_config.yaml
configs/method/: bitfit.yaml  bitfit_subset.yaml  full_ft.yaml  lora.yaml  prompt_tuning.yaml
configs/sweep/: lr_sweep.yaml
configs/task/: mrpc.yaml  rte.yaml  squad.yaml  sst2.yaml
configs/tracker/: mlflow.yaml  none.yaml  wandb.yaml
scripts/: measure_flops.py  setup_gpu.py  sweep.py  train.py  train_squad.py
src/: analysis.py  data.py  metrics.py  models.py  tracking.py  trainer.py
